"""
High-level protocol definitions and design guidance for Lumina's Memory subsystem.

This file **only declares** interfaces and data structures (no implementations),
and embeds key analysis, risks, and technical references as comments to guide
actual implementation in `memory/store/`, `memory/embeddings/`, `memory/retrieval/`.

Design considerations:
  - Use async-friendly APIs for potential I/O concurrency.
  - Support multi-modal memories (text, audio, image, video).
  - Provide extensible metadata for TTL, source, confidence, etc.
  - Combine vector search, lexical indices, and temporal heuristics in retrieval.
  - Address GDPR/CCPA, and data decay policies.

参考与选型建议：
  - 向量库: Pinecone, Qdrant, Weaviate, pgvector(PostgreSQL)
  - Memory/Retriever 抽象: LangChain, LlamaIndex
  - Embedding: OpenAI Embedding, BGE-m3
  - Hybrid Search: dense+lexical (ColBERT, SPLADE)

"""
from __future__ import annotations
import datetime as dt
from dataclasses import dataclass, field
from enum import Enum
from typing import Dict, List, Mapping, Optional, Protocol, Sequence, Tuple, Any
import uuid

# ---------- 1. MemoryType Enum ---------- #
class MemoryType(str, Enum):
    """
    Granular categories for different media & functional scopes.

    可按需增删，如需兼容外部向量库的 namespace，可在此处保留枚举。
    """
    TEXT       = "text"        # 普通文本 (转录、聊天记录等)
    COMMAND    = "command"     # 显式指令 / 操作   可能是结构化的
    PREFERENCE = "preference"  # 长期偏好 (风格、口味等)
    AUDIO      = "audio"       # 原始音频
    IMAGE      = "image"       # 原始图像
    KNOWLEDGE  = "knowledge"   # 结构化知识片段 可能来自外部文档
    INTERNAL   = "internal"    # Agent 自身状态 / 日志

# ---------- 2. Memory Data Class ---------- #
@dataclass
class Memory:
    """
    Unified metadata wrapper for a single memory record.

    - original_text: 原始文本内容，用于检索与重现。
    - type: 对应 MemoryType。
    - timestamp: UTC 时间戳，用于冷/热排序与衰减管理。
    - vector_id: 记忆块的唯一ID。对于父文档，这是文档ID；对于子文档，这是它自身的ID。
    - metadata: 包含附加信息的字典，如 is_parent, parent_id, child_type 等。
    """
    original_text: str
    type: MemoryType
    
    # 核心字段
    vector_id: str = field(default_factory=lambda: str(uuid.uuid4()))
    timestamp: dt.datetime = field(default_factory=dt.datetime.utcnow)
    metadata: Dict[str, Any] = field(default_factory=dict)
    blob_uri: Optional[str] = None
    
    # 不再需要 is_summary 和 indexes 字段，相关信息移入 metadata

    def to_dict(self) -> Dict[str, Any]:
        """将 Memory 对象序列化为字典，以便存入 JSON。"""
        return {
            "original_text": self.original_text,
            "type": self.type.name,  # 存储枚举的名称
            "blob_uri": self.blob_uri,
            "metadata": self.metadata,
            "timestamp": self.timestamp.isoformat(),
            "vector_id": self.vector_id,
        }

    @classmethod
    def from_dict(cls, data: Dict[str, Any]) -> Memory:
        """从字典反序列化为 Memory 对象。"""
        return cls(
            original_text=data["original_text"],
            type=MemoryType[data["type"]],  # 从名称恢复枚举成员
            blob_uri=data.get("blob_uri"),
            metadata=data.get("metadata", {}),
            timestamp=dt.datetime.fromisoformat(data["timestamp"]),
            vector_id=data["vector_id"],
        )

# ---------- 3. Protocol Interfaces ---------- #
class MemoryWriter(Protocol):
    """
    Write-side contract: persists raw & indexed memories.
    """

    async def store(
        self,
        original_text: str,
        mem_type: MemoryType,
        *,
        metadata: Optional[Mapping[str, Any]] = None,
        blob_uri: Optional[str] = None,
    ) -> Memory:
        ...  # 返回 Memory 以便链式操作和日志审计

class MemoryReader(Protocol):
    """
    Read-side contract: retrieves memories given a query string.

    Retrieval should consider:
      - Vector similarity as the primary ranking factor.
      - A secondary sorting mechanism (e.g., by timestamp) for highly relevant results.
      - Optional filtering by type / time range.
      - LLM-driven query rewriting for recall.
    """

    async def retrieve(
        self,
        query: str,
        *,
        limit: int = 5,
        filter_type: Optional[MemoryType] = None,
        time_range: Optional[Tuple[dt.datetime, dt.datetime]] = None,
    ) -> Sequence[Tuple[Memory, float]]:
        ...  # 可扩展返回同分值、相似度分数等

class MemoryManager(MemoryWriter, MemoryReader, Protocol):
    """
    Combined façade that bundles writer & reader behaviors.
    实现者可独立实现 read/write，也可组合外部服务。
    """
    async def get(self, vector_id: str) -> Optional[Memory]:
        """Retrieves a single memory object by its unique vector_id."""
        ...

    async def count(self) -> int:
        """Returns the total number of memory chunks in the store."""
        ...

    async def clear(self) -> None:
        """Clears all memories from the store."""
        ...

# ---------- 4. Implementation Notes & Risks ---------- #
# 1. 可变默认参数: 避免 `indexes=[]`, 使用 default_factory=list.
# 2. 时间一致性: 全部使用 UTC; 序列化存 ISO-8601.
# 5. 检索算法: hybrid search (dense+lexical), 参考 ColBERT, SPLADE.
# 7. 衰减 & 清理: 定期后台任务自动summarize/forget.
# 9. 更新/删除: `delete` 和 `delete_document` 接口已定义.
# 10. Chunking 粒度: 基于句子/主题分块, metadata 标序号;
# 12. 检索重写: LLM paraphrase query, 扩展 synonyms;
# 13. 冷启动: 使用 seed profile 或初始系统 prompt 写入 memory;

# ---------- 5. 参考文档 & 生态 ---------- #
# - LangChain Memory/Retriever Modules
# - LlamaIndex doc: https://gpt-index.readthedocs.io
# - Pinecone hybrid search examples
# - Qdrant vs. Weaviate trade-offs
# - OpenAI policy spec for PII filtering
# - ReAct Comet paper for decay scoring algorithms


# ---------- 6. 扩展提示：RAG 与文档知识库功能的设计提示 ------------- #
# 注意：
# 当 Lumina 逐步升级为更先进的 Retrieval-Augmented Generation (RAG) 系统时，
# 单纯从用户交互记忆存储和检索可能已经不足够。 
#
# 你可能需要额外构建一个专用的模块，例如：app/modules/document_processor 或 knowledge_ingestion，
# 支持对外部文档（pdf、txt、markdown、docx 等）内容进行批量加载、预处理、分块和索引。

#   请谨慎看待下面大模型的调研结果，选择更好的产品和 source
#
# 一般 RAG pipeline 建议做法：
# 1. 加载与解析文档：           
#     - 支持各种常见格式的文件 (PDF 使用 PyMuPDF 或 pdfplumber, DOCX 使用 python-docx 等)
#     - 解析文件，提取原始文本内容与元数据 (页码、章节)
#
# 2. 文档内容分块（Chunking）：
#     - 使用语义化分块方法，例如 Recursive Text Splitting 或 Character/Sentence Splitting，
#       推荐使用 LangChain 或 LlamaIndex 提供的开箱即用 Chunker 工具
#     - 每块大小建议在 200 ~ 500 tokens 之间，视模型上下文窗口决定
#     - 每个 chunk 需要保留原始文档的上下文信息（如页码、章节标题），以便后续追溯
#
# 3. 存储到向量库或 Memory 库：
#     - 将 chunk 后的文本单元转成向量并加索引后持久化
#     - 推荐向量库：Qdrant、Pinecone、Weaviate、pgvector 等，确保具备高效语义检索能力
#     - 将索引后的信息关联回 Lumina 的 Memory 结构，便于统一检索接口管理
#
# 通过这种方式：
# Lumina 可以更强大地实现以下高级功能：
#   - "知识库"构建：快速加载与存储大型资料、手册、教程
#   - "文档理解"：自动化提炼摘要、知识提取
#   - "文档问答"：基于文档语义片段的精准问答交互（如：企业内部知识问答、技术文档咨询）
#
# 推荐生态与工具：
# - 文档加载器：LangChain document_loaders、LlamaIndex loaders
# - 向量索引与检索：LlamaIndex VectorStoreIndex、LangChain VectorStore
# - 分块工具：LangChain RecursiveCharacterTextSplitter、LlamaIndex TextSplitter
#
# 重要参考：
# - LangChain 官方文档：https://python.langchain.com/docs/integrations/document_loaders/
# - LlamaIndex 官方文档：https://docs.llamaindex.ai/en/stable/getting_started/starter_example.html
# - OpenAI Cookbook for RAG: https://github.com/openai/openai-cookbook/blob/main/examples/RAG.md

